# cppTemplate

./: CMakeLists.txt  readme.md
include/apps/: CMakeLists.txt
include/apps/include/: apps.h
include/apps/src/: apps.cpp
include/camera_driver/: CMakeLists.txt
include/camera_driver/cameraInit/: CalibrateCamera.yaml  HIKcamera0.yaml  USBcamera0.yaml
include/camera_driver/camera_init/: HIKcamera0.yaml  USBcamera0.yaml  USBcamera1.yaml
include/camera_driver/include/: CameraParams.h  MvCameraControl.h  MvObsoleteInterfaces.h  camera_driver.h
include/camera_driver/lib/: CommonParameters.ini  MvFGProducerCML.cti  MvFGProducerCXP.cti  MvFGProducerGEV.cti  MvFGProducerXoF.cti  libMvUsb3vTL.so.4.3.1.4
include/camera_driver/src/: camera_driver.cpp
include/vcom/: CMakeLists.txt
include/vcom/include/: VCOM.h
include/vcom/src/: VCOM.cpp
src/: cameraCalibrate.cpp  main.cpp
